--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,7 @@
 <div class="social">
 	<h4>
     {% if site.github %}
-	  <a href="http://github.com/{{ site.github }}"><i class="fa fa-github"></i></a>
+	  <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i></a>
     {% endif %}
     {% if site.email %}
 	  <a href="mailto:{{ site.email}}"><i class="fa fa-envelope"></i></a>
@@ -13,8 +13,6 @@
     {% if site.linkedin %}
 	  <a href="http://linkedin.com/in/{{ site.linkedin }}"><i class="fa fa-linkedin"></i></a>
     {% endif %}
-    {% if site.stackoverflow %}
-	  <a href="http://stackoverflow.com/{{ site.stackoverflow }}"><i class="fa fa-stack-overflow"></i></a>
-    {% endif %}
+    
 	</h4>
 </div>
