--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
     <div id="footer">
         <div class="container">
-            <p class="text-muted">© All rights reserved. <a href="http://jekyllrb.com/">Jekyll</a> and
-             with ♥</p>
+            <p class="text-muted">© All rights reserved. Made with 🤘 and
+             🍷 </p>
         </div>
     </div>
 </footer>
