--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,5 +1,7 @@
 <div class="social">
 	<h4>
+		I'm Available for Work<br/>
+		
     {% if site.github %}
 	  <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i></a>
     {% endif %}
